--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,4 +1,7 @@
 #header
+
+    margin: 30px 0
+
     .header-logo
         text-align: center
         .tagline
@@ -6,8 +9,18 @@
             letter-spacing: 4px
             font-family: 'EliantoRegular'
             font-size: 2rem
-            color: #e44a5d
+            color: $text-highlight
     
     .links
         display: flex
         justify-content: space-between
+
+        a
+            color: #aaafc6
+            font-size: 1em
+            margin: 0.5em
+            padding: 0.25em 0
+            box-sizing: border-box
+            font-weight: bold
+            text-decoration: none
+            transition: all 0.5s
