switch to normal otf fonts

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -1,11 +1,13 @@
 $text-dark: #4b4a4f
 $text-light: #aaafc6
 $text-highlight: #e44a5d
-
     
+@import './header.sass'
+@import './link.sass'
+
+body
+    // font-family: 'TisaSansPro'    
     
 .text-highlight
     color: $text-highlight !important
     
-    
-@import './header.sass'
