pt sans caption

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -6,7 +6,7 @@ $text-highlight: #e44a5d
 @import './link.sass'
 
 body
-    // font-family: 'TisaSansPro'    
+    font-family: 'PT Sans Caption', sans-serif    
     
 .text-highlight
     color: $text-highlight !important
