--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,4 +1,5 @@
 @import './fontawesome/css/all.css';
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700');
 
 @font-face {
     font-family: 'EliantoRegular';
