--- a/src/styles/link.sass
+++ b/src/styles/link.sass
@@ -3,6 +3,6 @@
         color: $text-dark
         margin: 0
         font-weight: bold
-        // font-size: 1.15em
+        font-size: 1.2rem
     .link-details
         color: $text-light
