--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -9,7 +9,7 @@
             letter-spacing: 4px
             font-family: 'EliantoRegular'
             font-size: 2rem
-            color: $text-highlight
+            color: $theme-color
     
     .links
         display: flex
