votes under up btn

--- a/src/styles/link.sass
+++ b/src/styles/link.sass
@@ -5,15 +5,19 @@
     line-height: 1.5
 
     .upvote-btn
-        padding: 5px 12px
+        padding: 4px 12px
         font-size: 1.5rem
         color: $text-dark
         cursor: pointer
         &:hover
             color: $theme-color
+        .votes-number
+            margin: -5px 0 0 2px
+            line-height: 0
+            font-size: 1rem
     .link-title
         color: $text-dark
-        margin: 0
+        margin-right: 40px
         font-weight: bold
         font-size: 1.2rem
     .link-details
