fix header for logged in options

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -15,7 +15,7 @@
         display: flex
         justify-content: space-between
 
-        a
+        a, div
             color: #aaafc6
             font-size: 1em
             margin: 0.5em
@@ -24,3 +24,5 @@
             font-weight: bold
             text-decoration: none
             transition: all 0.5s
+            display: inline
+            cursor: pointer
