--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -5,13 +5,20 @@ $theme-color: #e44a5d
     
 @import './header.sass'
 @import './link.sass'
+@import './loading.sass'
 
 body
     font-family: 'PT Sans Caption', sans-serif
     margin: 0
+    padding: 0
     border-top: 5px solid $theme-color 
     // background-color: #282c35
     
+.app
+    max-width: 768px
+    margin-left: auto
+    margin-right: auto
+
 .text-highlight
     color: $theme-color !important
     
