--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -19,6 +19,42 @@ body
     margin-left: auto
     margin-right: auto
 
+.theme-btn
+  position: relative
+  margin: auto
+  padding: 19px 22px
+  transition: all .2s ease
+  color: $text-dark
+  cursor: pointer
+  i
+    font-size: 16px
+  &:before
+    content: ""
+    position: absolute
+    top: 0
+    left: 0
+    display: block
+    border-radius: 28px
+    background: rgba($text-light,.5)
+    width: 56px
+    height: 56px
+    transition: all .3s ease
+  span
+    position: relative
+    font-size: 16px
+    line-height: 18px
+    font-weight: 900
+    letter-spacing: .25em
+    text-transform: uppercase
+    vertical-align: middle
+  &:hover
+    &:before
+      width: 100%
+      background: rgba($text-light,1)
+  &:active
+    transform: scale(.96)
+
+    
 .text-highlight
     color: $theme-color !important
     
