--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -54,7 +54,58 @@ body
   &:active
     transform: scale(.96)
 
-    
+.input
+  position: relative
+  margin: auto
+  width: 100%
+  max-width: 280px
+  .label
+    position: absolute
+    top: 16px
+    left: 0
+    font-size: 16px
+    color: #9098a9
+    font-weight: 500
+    transform-origin: 0 0
+    transition: all 0.2s ease
+  .border
+    position: absolute
+    bottom: 0
+    left: 0
+    height: 2px
+    width: 100%
+    background: #07f
+    transform: scaleX(0)
+    transform-origin: 0 0
+    transition: all 0.15s ease
+  input
+    -webkit-appearance: none
+    width: 100%
+    border: 0
+    font-family: inherit
+    padding: 12px 0
+    height: 48px
+    font-size: 16px
+    font-weight: 500
+    border-bottom: 2px solid #c8ccd4
+    background: none
+    border-radius: 0
+    color: #223254
+    transition: all 0.15s ease
+    &:hover
+      background: rgba(34, 50, 84, 0.03)
+    &:not(:placeholder-shown) + span
+      color: #5a667f
+      transform: translateY(-26px) scale(0.75)
+    &:focus
+      background: none
+      outline: none
+      + span
+        color: #07f
+        transform: translateY(-26px) scale(0.75)
+        + .border
+          transform: scaleX(1)
+
 .text-highlight
     color: $theme-color !important
     
