styled pagination buttons

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -145,4 +145,23 @@ body
     color: white
     &::after
       height: 103%
+
+.pagination-btn
+	display: flex
+	justify-content: center
+	margin: 30px
+
+	.prev,.next
+		color: $text-light
+		margin: 20px
+		cursor: pointer
+		transition: all .4s
+
+		&:hover
+			color: $text-dark
+
+		.fal
+			margin: 0 6px
+
 	
+
