styled search page

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -106,6 +106,21 @@ body
         + .border
           transform: scaleX(1)
 
+.input.search
+	max-width: 550px
+	i
+		position: absolute
+		padding: 8px
+		border-radius: 50%
+		top: 13px
+		right: 5px
+		cursor: pointer
+		transition: all .3s	
+
+		&:hover
+			background-color: $theme-color
+			color: #fff
+
 .text-highlight
     color: $theme-color !important
     
