--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -136,7 +136,8 @@ body
 	margin-top: 15px
 
 .form-action-secondary
-	margin-top: 7px
+	margin-top: 12px
+	font-size: 0.9rem
 
 .underline-fill
   position: relative
