--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -6,6 +6,7 @@ $theme-color: #e44a5d
 @import './header.sass'
 @import './link.sass'
 @import './loading.sass'
+@import './about.sass'
 
 body
     font-family: 'PT Sans Caption', sans-serif
@@ -18,6 +19,13 @@ body
     max-width: 768px
     margin-left: auto
     margin-right: auto
+
+.highlight
+	cursor: pointer
+	transition: all ease .3s
+	// font-size: 1.1rem
+	&:hover
+		color: $theme-color	
 
 .theme-btn
   position: relative
@@ -147,6 +155,10 @@ body
   padding: 0 1px
   margin-left: 3px
   transition: color ease 0.3s
+  a
+	  text-decoration: none
+	  color: inherit
+	  font-weight: 600
   &::after
     content: ''
     position: absolute
