--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -16,3 +16,23 @@
 
     .git-repo
         margin: 10px
+
+    .profile
+        margin-top: 20px
+        h4
+            margin: 10px
+        .img
+            width: 75px
+            height: 75px
+            border-radius: 50%
+            margin: auto
+            display: block
+            img
+                display: block
+                margin: 0
+                width: 100%
+                border-radius: 50%
+        .links
+            font-size: 1.2rem
+            a
+                margin: 0 5px
