--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -2,6 +2,17 @@
 
     margin: 30px 0
 
+    .theme-toggle-btn
+        font-size: 1rem
+        background: none
+        border: none
+        color: $text-light
+        cursor: pointer
+        &:hover
+            color: $theme-color
+        &:focus
+            outline: none
+
     .header-logo
         text-align: center
         .tagline
