dark mode input color change

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -34,14 +34,14 @@ body
     margin-right: auto
 
 .app.dark
-	// .theme-btn
-	// 	color: $dark-mode-text-light !important
-	.link-title
-		color: $dark-mode-text-light !important
-	.link-details
-		color: $dark-mode-text-dark !important
-	.form-action-secondary
-		color: $text-light
+    .input input
+        color: $dark-mode-text-light !important
+    .link-title
+        color: $dark-mode-text-light !important
+    .link-details
+        color: $dark-mode-text-dark !important
+    .form-action-secondary
+        color: $text-light
 
 .highlight
 	cursor: pointer
